[gd_scene load_steps=5 format=3 uid="uid://bqn1avopmu5t6"]

[ext_resource type="Script" path="res://scripts/editor_object.gd" id="1_nl3lm"]
[ext_resource type="PackedScene" uid="uid://b2mhdvg51dg5g" path="res://scenes/Item_Selector.tscn" id="2_jhnyn"]
[ext_resource type="Script" path="res://scripts/camera_2d.gd" id="3_03gv3"]

[sub_resource type="TileSet" id="TileSet_saa3r"]

[node name="main" type="Node2D"]

[node name="Level" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Level"]
tile_set = SubResource("TileSet_saa3r")
format = 2

[node name="Editor_Object" type="Node2D" parent="."]
script = ExtResource("1_nl3lm")

[node name="Sprite2D" type="Sprite2D" parent="Editor_Object"]

[node name="Item_Selector" parent="." instance=ExtResource("2_jhnyn")]

[node name="FileDialog" type="FileDialog" parent="Item_Selector"]
position = Vector2i(300, 36)
size = Vector2i(500, 400)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 322)
script = ExtResource("3_03gv3")

[connection signal="confirmed" from="Item_Selector/FileDialog" to="Editor_Object" method="_on_file_dialog_confirmed"]
[connection signal="visibility_changed" from="Item_Selector/FileDialog" to="Editor_Object" method="_on_file_dialog_visibility_changed"]
